--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'io.jmix.security:jmix-security-ui-starter'
     implementation 'io.jmix.security:jmix-security-data-starter'
     implementation 'io.jmix.localfs:jmix-localfs-starter'
-    implementation "io.jmix.translations:jmix-translations-ru"
+    implementation 'io.jmix.translations:jmix-translations-ru'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
@@ -41,6 +41,8 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    testImplementation 'org.mockito:mockito-core:3.11.2'
+
 }
 
 test {
