--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'io.jmix' version '1.0.0'
+    id 'io.jmix' version '1.0.2'
     id 'java'
 }
 
@@ -11,7 +11,7 @@ jmix {
 }
 
 group = 'ru.itsyn'
-version = '0.1-SNAPSHOT'
+version = '0.1'
 sourceCompatibility = JavaVersion.VERSION_11
 
 repositories {
@@ -37,12 +37,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
     runtimeOnly 'org.hsqldb:hsqldb'
+    runtimeOnly 'org.postgresql:postgresql'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
     testImplementation 'org.mockito:mockito-core:3.11.2'
-
 }
 
 test {
