#1 - convert project to jmix addon

--- a/build.gradle
+++ b/build.gradle
@@ -1,50 +1,49 @@
-plugins {
-    id 'io.jmix' version '1.0.2'
-    id 'java'
-}
-
-apply plugin: 'org.springframework.boot'
-
-jmix {
-    bomVersion = '1.0.1' 
-    projectId = 'menu'
-}
-
-group = 'ru.itsyn'
-version = '0.1'
-sourceCompatibility = JavaVersion.VERSION_11
-
-repositories {
-    mavenCentral() 
-    maven {
-        url 'https://global.repo.jmix.io/repository/public'
-    } 
-}
-
-dependencies {
-    implementation 'io.jmix.core:jmix-core-starter'
-    implementation 'io.jmix.data:jmix-eclipselink-starter'
-    implementation 'io.jmix.ui:jmix-ui-starter'
-    implementation 'io.jmix.ui:jmix-ui-data-starter'
-    implementation 'io.jmix.ui:jmix-ui-themes-compiled'
-    implementation 'io.jmix.ui:jmix-ui-widgets-compiled'
-    implementation 'io.jmix.security:jmix-security-starter'
-    implementation 'io.jmix.security:jmix-security-ui-starter'
-    implementation 'io.jmix.security:jmix-security-data-starter'
-    implementation 'io.jmix.localfs:jmix-localfs-starter'
-    implementation 'io.jmix.translations:jmix-translations-ru'
-
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-
-    runtimeOnly 'org.hsqldb:hsqldb'
-    runtimeOnly 'org.postgresql:postgresql'
-
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+buildscript {
+    repositories {
+        gradlePluginPortal()
     }
-    testImplementation 'org.mockito:mockito-core:3.11.2'
+    dependencies {
+        classpath "io.jmix.gradle:jmix-gradle-plugin:1.0.2"
+    }
 }
 
-test {
-    useJUnitPlatform()
+group = 'ru.itsyn.jmix'
+version = '0.1'
+
+subprojects {
+    apply plugin: 'java-library'
+    apply plugin: 'maven-publish'
+    apply plugin: 'io.jmix'
+
+    repositories {
+        mavenCentral()
+        maven { url 'https://global.repo.jmix.io/repository/public' }
+    }
+
+    jmix {
+        bomVersion = '1.0.1'
+        projectId = 'menu'
+    }
+
+    group = rootProject.group
+    version = rootProject.version
+    sourceCompatibility = JavaVersion.VERSION_11
+
+    java {
+        withSourcesJar()
+    }
+
+    publishing {
+        publications {
+            maven(MavenPublication) {
+                from components.java
+            }
+        }
+    }
+
+    // remove after https://youtrack.jetbrains.com/issue/IDEA-227215 is fixed
+    tasks.withType(GenerateModuleMetadata) {
+        enabled = false
+    }
+
 }
