--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         gradlePluginPortal()
     }
     dependencies {
-        classpath "io.jmix.gradle:jmix-gradle-plugin:1.0.2"
+        classpath 'io.jmix.gradle:jmix-gradle-plugin:1.1.3'
     }
 }
 
@@ -20,7 +20,7 @@ subprojects {
     }
 
     jmix {
-        bomVersion = '1.0.1'
+        bomVersion = '1.1.1'
         projectId = 'menu'
     }
 
