#1 - MenuEntityEditor - add config field

--- a/jmix-menu-editor-starter/build.gradle
+++ b/jmix-menu-editor-starter/build.gradle
@@ -1,10 +1,7 @@
 archivesBaseName = 'jmix-menu-editor-starter'
 
 jmix {
-    bomVersion = '1.1.0'
-    entitiesEnhancing {
-        enabled = false
-    }
+    entitiesEnhancing.enabled = false
 }
 
 dependencies {
