#1 - fix add-on menu-config

--- a/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/module.properties
+++ b/jmix-menu-editor/src/main/resources/ru/itsyn/jmix/menu_editor/module.properties
@@ -1,3 +1,2 @@
 jmix.core.availableLocales=en,ru
-
-jmix.ui.menuConfig = ru/itsyn/jmix/menu_editor/menu.xml
+jmix.ui.menu-config=ru/itsyn/jmix/menu_editor/menu.xml
