--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'io.jmix' version '1.4.2' apply false
 }
 
-group = 'ru.itsyn.jmix'
+group = 'io.github.it-syn'
 
 subprojects {
     apply plugin: 'java-library'
@@ -44,6 +44,29 @@ subprojects {
         publications {
             maven(MavenPublication) {
                 from components.java
+                pom {
+                    name = "io.github.it-syn:${project.archivesBaseName}"
+                    description = 'The add-on provides support of multiple main menus in Jmix applications.'
+                    packaging = 'jar'
+                    licenses {
+                        license {
+                            name = 'The Apache License, Version 2.0'
+                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+                    scm {
+                        connection = 'sscm:git:git://github.com/daring2/jmix-menu-editor.git'
+                        developerConnection = 'scm:git:ssh://github.com:daring2/jmix-menu-editor.git'
+                        url = "https://github.com/daring2/jmix-menu-editor"
+                    }
+                    developers {
+                        developer {
+                            id = 'daring'
+                            name = 'Danila Valikov'
+                            email = 'danila.daring@gmail.com'
+                        }
+                    }
+                }
             }
         }
         repositories.maven {
