--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ subprojects {
 
     javadoc {
         options.addStringOption("sourcepath", "")
+        options.addStringOption("Xdoclint:none", "-quiet")
     }
 
     signing {
