--- a/jmix-menu-editor/build.gradle
+++ b/jmix-menu-editor/build.gradle
@@ -3,9 +3,8 @@ archivesBaseName = 'jmix-menu-editor'
 dependencies {
     implementation 'io.jmix.core:jmix-core-starter'
     implementation 'io.jmix.data:jmix-eclipselink-starter'
-    implementation 'io.jmix.security:jmix-security-starter'
-    implementation 'io.jmix.ui:jmix-ui-starter'
-    implementation 'io.jmix.ui:jmix-ui-themes'
+    implementation 'io.jmix.flowui:jmix-flowui-starter'
+    implementation 'io.jmix.flowui:jmix-flowui-themes'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
