--- a/jmix-menu-editor/src/test/resources/ru/itsyn/jmix/menu_editor/test-app.properties
+++ b/jmix-menu-editor/src/test/resources/ru/itsyn/jmix/menu_editor/test-app.properties
@@ -1,1 +1,3 @@
 main.liquibase.change-log=ru/itsyn/jmix/menu_editor/liquibase/changelog.xml
+
+jmix.ui.websocket-request-security-context-provided=false
